--- a/gb/ncid283_5.md
+++ b/gb/ncid283_5.md
@@ -1,4 +1,15 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qdbzyr225/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qdbzyr225/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国经济</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/qdbzyr225/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qdbzyr225/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qdbzyr225/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/29/n11752263.md#1" target="_blank">【2019盘点】华人关注的十大新闻</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/29/n11752263.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019combo1-150x120.jpg" align ="left"></a>中国传统上的猪年 “诸事大吉”，不过2019猪年对于中共来说，确是举步艰难。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 8:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/31/n11758887.md#1" target="_blank">2019大陆车企关键字：下滑、亏损、停产</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/31/n11758887.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/39a423572cf61c56687990155c7257b3-150x120.jpg" align ="left"></a>大陆汽车企业今年进入寒冬，四大汽车集团（长安、东风、上汽、一汽）销量下滑、出售股份；中小型车企频频被曝停产、退出整车生产，甚至破产。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 7:11 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/31/n11758705.md#1" target="_blank">华为：生存是2020第一要务 将淘汰10%主管</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/31/n11758705.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/1103010952451164-150x120.jpg" align ="left"></a>2019最后一天，华为轮值董事长徐直军向员工和客户发表新年贺词。他在致辞中称，生存将是华为2020的第一要务，10%的主管面临淘汰。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 2:57 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/31/n11758448.md#1" target="_blank">2019陆企违约逾1400亿 遍及28省 北京最多</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/31/n11758448.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/04/1304262329491528-150x120.jpg" align ="left"></a>2019年最后一天，盘点全年大陆企业债务情况，业界称为“全面违约”，违约企业涉及众多行业，遍布20个省级行政区，北京最多，违约债券数量接近180只，违约金额超过1400亿元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 2:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/31/n11758500.md#1" target="_blank">川普：1月15日我在白宫签第一阶段协议</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/31/n11758500.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1180494181-1-150x120.jpg" align ="left"></a>周二（12月31日），美国总统川普（特朗普）表示，1月15日，美中将在白宫举行第一阶段贸易协议签署仪式，且他会亲自参加。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 11:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/31/n11757425.md#1" target="_blank">中国银行：人民币将在6.75至7.35间震荡</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/31/n11757425.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/ece9ce6653978d24b49f2322073548d8-150x120.jpg" align ="left"></a>中国银行日前发表了对明年人民币兑美元汇率的预测，该行认为，明年人民币汇率会随着贸易战的起伏而震荡，但不同于其它金融机构的预测，中国银行认为明年人民币汇率会在6.75至7.35人民币兑换1美元之间震荡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 7:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/31/n11756978.md#1" target="_blank">大陆近六千家P2P平台爆雷 波及270万投资者</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/31/n11756978.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/P2P-platform-collapse-150x120.jpg" align ="left"></a>最新的数据显示，从高峰期至今年9月份，大陆有近6000家P2P平台爆发违约、负责人卷款潜逃或停止营运，涉及270万投资者。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 5:16 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/31/n11757250.md#1" target="_blank">南水北调运行5年 中共为何拟建后续工程？</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/31/n11757250.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1407040947282664-600x400-150x120.jpg" align ="left"></a>南水北调工程再次受到外界关注。中共官方日前高调发布了南水北调东、中线一期工程建成后的运行情况。不过，官方称，将展开南水北调的后续工程。那么，南水北调工程到底运行情况怎样？为什么还需后续工程？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 4:56 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/30/n11756450.md#1" target="_blank">外媒：企业债或成大陆明年最大灰犀牛</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/30/n11756450.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1312310333481528-600x400-150x120.jpg" align ="left"></a>12月30日，BBC中文网发表了有关明年大陆灰犀牛的文章。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 1:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/26/n11747241.md#1" target="_blank">【2019盘点】A股上市公司十大丑闻</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/26/n11747241.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7fd102fa91e4776fb275d1eefdb908ee-600x400-150x120.jpg" align ="left"></a>回顾2019年，大陆股民“怒了”：从扇贝跑了、猪活活饿死、猪饿瘦了、300亿一夜蒸发、实控人被抓、到虚假年报……这一桩桩“奇事”背后，让所有投资者损失惨重、失望，同时也暴露出这些上市公司的财务危机及监管漏洞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 1:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/30/n11756423.md#1" target="_blank">三星电机关闭大陆昆山工厂  迁往东南亚</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/30/n11756423.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1179083542-150x120.jpg" align ="left"></a>三星集团子公司“三星电机”正在清算江苏昆山三星电机有限公司，计划将智能手机主板（HDI）生产线转移至东南亚国家，降低对大陆市场的依赖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 8:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/30/n11756383.md#1" target="_blank">美中科技战 北京因一大劣势难超华盛顿</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/30/n11756383.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/GettyImages-93683901-150x120.jpg" align ="left"></a>外界预测，2020年，美中科技战将进入白热化阶段。专家说，人才通常是取得科技优势的关键因素，然而北京在吸引人才方面远落后于美国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 6:55 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/30/n11756198.md#1" target="_blank">老人钱哪去了？大陆养老机构各式承诺频爆雷</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/30/n11756198.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/12/1112211235042343-150x120.jpg" align ="left"></a>大陆养老机构频频爆雷，先以“优质服务和高额回报”等各式承诺为诱饵套取老人储蓄，不久后人去楼空，令成千上万受害老人的终生积蓄血本无归。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 5:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/30/n11755963.md#1" target="_blank">大陆校园贷形成产业链 高利贷暴力催款横行</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/30/n11755963.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2004/06/406184548868-150x120.jpg" align ="left"></a>大陆校园贷乱象不止，常以有组织的产业链形式存在，甚至金融机构与网贷平台合作进行校园贷业务，一些大学生因无力偿还高额利息甚至走上不归路，而官方并没有实质性的监管作为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 4:31 AM							</td></tr>
@@ -19,16 +30,5 @@
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/28/n11751850.md#1" target="_blank">中国内衣大王断崖式亏损 4年关店1500家</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/28/n11751850.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG11488478856-600x400-150x120.jpg" align ="left"></a>形象代言人关晓彤取代林志玲后，都市丽人一路下滑的业绩并没有好转。这家“中国内衣第一股”近日在公布盈利警示后，股价一度大跌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 7:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/28/n11751781.md#1" target="_blank">【热点互动】松绑户籍防范失业潮 危机来临？</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/28/n11751781.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e49b8ceefca90a_ttl7dayeHb_2e91dbafacd0ce1d-150x120.jpg" align ="left"></a>近日中共高层发布通知，宣布将全面取消常驻人口3百万以下人口的落户限制，这意味着中国绝大多数城市将没有户口制度。中共松绑户籍制度：城市户口还有多大吸引力？
 另一方面，总理李克强近日签发文件，要求各地防范规模性失业潮，以及有此可能引发的突发群体事件。那么中共为什么在此时大幅松绑户籍制度？中国的经济和就业形势有多严峻？国务院紧急发文防范突发群体事件！今晚我们请来.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 7:15 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/26/n11747468.md#1" target="_blank">【2019盘点】中国经济十大困局</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/26/n11747468.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/ChinaEconomy-150x120.jpg" align ="left"></a>回首2019，在日益升级的中美贸易战以及日渐蔓延的债务违约的炮火、爆雷声中，中国经济步履蹒跚，在中共债务经济的泥沼中愈陷愈深。从房市、股市到债市，从出口、消费到投资，各个经济领域都是困局难解。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 9:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/28/n11751072.md#1" target="_blank">为保经济增长 中共明年或增发10%地方债</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/28/n11751072.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/economy-construction-tian-jing-GettyImages-474029480-600x400-150x120.jpg" align ="left"></a>中国财政科学研究院院长刘尚希12月26日表示，为了保证经济增长，中共当局明年可能允许地方当局增加发行约10%的专项债，即地方当局被允许发行约2.4万亿元人民币专项债用于基建项目。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:41 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/28/n11750581.md#1" target="_blank">【拍案惊奇】香港水源是否完全依赖大陆？</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/28/n11750581.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e4678d97207c6d_ttl7day5N1_tn1227-150x120.jpg" align ="left"></a>今天是美东时间的2019年12月27日，周五。今天我们来聊一个话题，这个话题经常会在网上引起争论，就是香港的水资源，是不是完全依赖大陆？很多网友在争论的时候，各说各话，多是喊口号，很少有人深入细致去分析。今天我们谈这个。我们就事论事，在这场香港“水革命”持续的时候，谈谈香港的“水”，到底是怎么来的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 3:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/27/n11749930.md#1" target="_blank">3万元鹤岗买房 学者：产业不振 人口外流</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/27/n11749930.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a4-1@1200x1200-1-150x120.jpg" align ="left"></a>3万～5万元人民币就能在鹤岗买房安家，使这个黑龙江的小城市成为了“网红”。有学者认为， “产业不振和人口外流”的循环，使鹤岗楼市跌到“白菜价”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 2:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/28/n11750889.md#1" target="_blank">被指垄断 丰田汽车被中共罚款8761万</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/28/n11750889.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_101986585-150x120.jpg" align ="left"></a>丰田汽车（中国）投资有限公司被中共指责涉垄断，日前被罚款8761.3万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 2:01 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/28/n11750541.md#1" target="_blank">中国外债达到2万亿美元 创新高</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/28/n11750541.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1312310333481528-600x400-150x120.jpg" align ="left"></a>12月27日，中共国家外汇管理局公布了2019年9月末中国全口径外债数据，数据显示，截至9月底，中国全口径(含本外币)外债余额为2.0325万亿美元，再次创下新高。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:57 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/27/n11750404.md#1" target="_blank">日大型钢企“日本制铁”计划关闭大陆工厂</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/27/n11750404.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/07/80730213859836-150x120.jpg" align ="left"></a>日本大型钢铁公司“日本制铁”（Nippon Steel）计划停止其子公司在中国浙江的特殊钢生产，并考虑关闭在浙江的工厂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:51 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/27/n11750070.md#1" target="_blank">中国年轻人债台高筑 为何中共最不乐见</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/27/n11750070.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/11/711260141191508-150x120.jpg" align ="left"></a>中国年轻世代的个人信用恶化，可能是中共最不乐见的一件事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:39 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/27/n11750395.md#1" target="_blank">贸易战暂休战 美中经济关系仍会部分脱钩</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/27/n11750395.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/GettyImages-1082174058-3-150x120.jpg" align ="left"></a>尽管美中贸易战因第一阶段协议的达成而暂时消停，但这并不表明华盛顿及北京的关系会越来越紧密，相反，在部分议题上可能会逐步走向分离。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 7:22 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/27/n11750266.md#1" target="_blank">替儿还债？王思聪母亲15家公司被注销</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/27/n11750266.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4bb0aedfgy1fk1gcxj1cqj20c807taf6-150x120.jpg" align ="left"></a>近日有报导称，王健林之子王思聪之所以得以偿清债务，与其母林宁及时出资有关。最新资料显示，林宁担任法定代表人的15家公司全部被注销。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 5:52 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/27/n11750216.md#1" target="_blank">中国褐皮书：陆企现金流恶化 影子贷款再增</a><br></h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/19/12/27/n11750216.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/11/811160247131665-150x120.jpg" align ="left"></a>中国褐皮书（China Beige Book）第四季度的报告显示，大陆企业的现金流恶化，新订单减少，制造业供过于求，影子银行贷款再次增加。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 5:48 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qdbzyr225/djy/blob/master/gb/ncid283_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/ncid283.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/ncid283_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/ncid283_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/ncid283_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/ncid283_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/ncid283_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/ncid283_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/ncid283_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/ncid283_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/qdbzyr225/djy/blob/master/gb/ncid283_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/qdbzyr225/djy/blob/master/gb/ncid283_5.md#1<br><a href="https://github.com/qdbzyr225/djy/blob/master/gb/ncid283_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qdbzyr225/djy/blob/master/gb/ncid283_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid283_5.htm">http://www.epochtimes.com/gb/ncid283_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
