--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797672.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/11/1911172004042188-600x400-1-320x200.jpg">郑文杰案翻版？“国难忠医”成员广州被抓</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798554.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/49390960573_dfd5360f83_k-320x200.jpg">签署中美贸易协议后首发推 川普说了啥</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11786063.md#1">【拍案惊奇】蔡英文连任！北京的三层误判</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11783658.md#1">【更新】蔡英文破817万票 民进党立委过半</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
@@ -34,6 +34,7 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796992.md#1">【翻墙必看】中共对官员推奇葩要求 贻笑天下</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797851.md#1">故宫角楼餐厅6千多元年夜饭引争议 已全取消</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797766.md#1">班农：川普以贸易战打垮中国共产党</a><br>
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797672.md#1">郑文杰案翻版？“国难忠医”成员广州被抓</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797264.md#1">程晓容：美中签约 川普强调“要坚强”透深意</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797366.md#1">越南现2宗疑似武汉肺炎病例 全球8地响警报</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797365.md#1">孙文斌杀女医生不足一月 法院迅速判处死刑</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796541.md#1">【拍案惊奇】首阶段贸易协议 中美各让步什么？</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796694.md#1">中美贸易协议解读 金融服务领域八大要点</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796563.md#1">央视前主持人赵忠祥患癌在北京去世</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796603.md#1">日本确认首宗武汉肺炎病例 患者为中国男子</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798177.md#1">第一阶段贸易协议 中方承诺从美方购买稀土</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797707.md#1">中美签署协议?专家：无法改变中美对抗局面</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797969.md#1">中共禁止美公民离境 美议员提议立法制裁</a><br>
@@ -58,7 +58,7 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796406.md#1">山寨乔丹告赢正版成中共法院范例 引发批评</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796505.md#1">美中贸易协议 打击在线出售假冒产品</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11793247.md#1">山东招远610副主任宋少昌被举报到海外</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796393.md#1">华为涉足科研网 加国专家：情报机构需留意</a><br>
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796393.md#1">华为借道加国云计算 涉足国际核物理研究网络</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796424.md#1">美中协议解决两大问题 美科技业受益</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795392.md#1">中美协议 北京答应加购哪些商品及服务</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796118.md#1">为创作自由卖楼拍片 黄子华：拍给香港人看</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,960,974 人
+- 共 349,962,638 人
 ```
 </strong>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
